--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html {
 }
 
 body {
+  margin-top: 90px; /* Margin bottom by footer height */
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
@@ -14,6 +15,5 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
 }
