--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,8 @@ body {
   height: 60px; /* Set the fixed height of the footer here */
   background-color: #f5f5f5;
 }
+
+.modal-90w {
+  width: 90%;
+  max-width: none!important;
+}
